/*
Â© 2025 Sharon Aicler (saichler@gmail.com)

Layer 8 Ecosystem is licensed under the Apache License, Version 2.0.
You may obtain a copy of the License at:

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package crm;

option go_package = "./types/crm";

import "crm-common.proto";
import "erp-common.proto";
import "api.proto";

// ============================================================================
// OPPORTUNITY MANAGEMENT MESSAGES
// ============================================================================

// @PrimeObject
// CrmOpportunity represents a sales opportunity
message CrmOpportunity {
  string opportunity_id = 1;
  string name = 2;
  string account_id = 3;                   // cross-ref: CrmAccount
  string primary_contact_id = 4;           // cross-ref: CrmContact
  erp.Money amount = 5;
  CrmSalesStage stage = 6;
  int32 probability = 7;
  int64 close_date = 8;
  CrmOpportunityStatus status = 9;
  string owner_id = 10;                    // cross-ref: HCM Employee
  string lead_source_id = 11;              // cross-ref: CrmLeadSource
  string campaign_id = 12;                 // cross-ref: CrmCampaign (optional)
  string description = 13;
  string next_step = 14;
  string loss_reason = 15;
  string competitor_id = 16;               // cross-ref: CrmOppCompetitor (primary competitor)
  erp.Money expected_revenue = 17;
  int64 last_activity_date = 18;
  map<string, string> custom_fields = 19;
  erp.AuditInfo audit_info = 20;
  repeated CrmOppActivity activities = 21;
  repeated CrmOppProduct products = 22;
  repeated CrmOppTeam team_members = 23;
  repeated CrmOppCompetitor competitors = 24;
}

message CrmOpportunityList {
  repeated CrmOpportunity list = 1;
  l8api.L8MetaData metadata = 2;
}

// @PrimeObject
// CrmOppStage represents a sales stage definition
message CrmOppStage {
  string stage_id = 1;
  string name = 2;
  string description = 3;
  int32 sequence = 4;
  int32 probability = 5;
  bool is_closed = 6;
  bool is_won = 7;
  bool is_active = 8;
  string forecast_category = 9;
  map<string, string> custom_fields = 10;
  erp.AuditInfo audit_info = 11;
}

message CrmOppStageList {
  repeated CrmOppStage list = 1;
  l8api.L8MetaData metadata = 2;
}

// CrmOppCompetitor represents a competitor on an opportunity (child of CrmOpportunity)
message CrmOppCompetitor {
  string competitor_id = 1;
  string name = 3;
  string website = 4;
  string strengths = 5;
  string weaknesses = 6;
  CrmThreatLevel threat_level = 7;
  erp.Money competitor_price = 8;
  string notes = 9;
  bool is_primary = 10;
  map<string, string> custom_fields = 11;
  erp.AuditInfo audit_info = 12;
}

// CrmOppProduct represents a product line on an opportunity (child of CrmOpportunity)
message CrmOppProduct {
  string line_id = 1;
  string product_id = 3;                   // cross-ref: SCM Item
  string product_name = 4;
  double quantity = 5;
  erp.Money unit_price = 6;
  double discount_percent = 7;
  erp.Money total_price = 8;
  string description = 9;
  int32 line_number = 10;
  map<string, string> custom_fields = 11;
  erp.AuditInfo audit_info = 12;
}

// CrmOppTeam represents a team member on an opportunity (child of CrmOpportunity)
message CrmOppTeam {
  string member_id = 1;
  string employee_id = 3;                  // cross-ref: HCM Employee
  string role = 4;
  bool is_primary = 5;
  double split_percent = 6;
  string notes = 7;
  map<string, string> custom_fields = 8;
  erp.AuditInfo audit_info = 9;
}

// CrmOppActivity represents an activity on an opportunity (child of CrmOpportunity)
message CrmOppActivity {
  string activity_id = 1;
  CrmActivityType activity_type = 3;
  string subject = 4;
  string description = 5;
  int64 activity_date = 6;
  CrmActivityStatus status = 7;
  string assigned_to = 8;                  // cross-ref: HCM Employee
  int32 duration_minutes = 9;
  string outcome = 10;
  bool is_completed = 11;
  map<string, string> custom_fields = 12;
  erp.AuditInfo audit_info = 13;
}

